@@ -15,9 +15,7 @@ import io.camunda.client.CamundaClient;
 import io.camunda.client.api.command.ProblemException;
 import io.camunda.client.api.search.enums.UserTaskState;
 import io.camunda.client.api.search.response.UserTask;
-import io.camunda.client.impl.ResponseMapper;
-import io.camunda.client.protocol.rest.StringFilterProperty;
-import io.camunda.client.protocol.rest.UserTaskVariableFilterRequest;
+import io.camunda.client.api.search.response.Variable;
 import io.camunda.qa.util.multidb.MultiDbTest;
 import io.camunda.zeebe.model.bpmn.Bpmn;
 import java.io.InputStream;
@@ -26,6 +24,7 @@ import java.time.OffsetDateTime;
 import java.time.ZoneId;
 import java.time.format.DateTimeFormatter;
 import java.util.Collections;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Random;
@@ -78,7 +77,7 @@ class UserTaskSearchTest {
     assertThat(result.items().size()).isEqualTo(1);
 
     // Validate that names "P1" and "P2" exist in the result
-    assertThat(result.items().stream().map(item -> item.getName()))
+    assertThat(result.items().stream().map(UserTask::getName))
         .containsExactlyInAnyOrder("P1")
         .doesNotContain("P2");
   }
@@ -94,7 +93,7 @@ class UserTaskSearchTest {
     assertThat(result.items().size()).isEqualTo(1);
 
     // Validate that names "P1" and "P2" exist in the result
-    assertThat(result.items().stream().map(item -> item.getName()))
+    assertThat(result.items().stream().map(UserTask::getName))
         .containsExactlyInAnyOrder("P1")
         .doesNotContain("P2");
   }
@@ -112,7 +111,7 @@ class UserTaskSearchTest {
     assertThat(result.items()).hasSize(2);
 
     // Validate that names "P1" and "P2" exist in the result
-    assertThat(result.items().stream().map(item -> item.getName()))
+    assertThat(result.items().stream().map(UserTask::getName))
         .containsExactlyInAnyOrder("P1", "P2");
   }
 
@@ -129,7 +128,7 @@ class UserTaskSearchTest {
     assertThat(result.items()).hasSize(2);
 
     // Validate that names "P1" and "P2" exist in the result
-    assertThat(result.items().stream().map(item -> item.getName()))
+    assertThat(result.items().stream().map(UserTask::getName))
         .containsExactlyInAnyOrder("P1", "P2");
   }
 
@@ -150,7 +149,7 @@ class UserTaskSearchTest {
     assertThat(result.items()).hasSize(1);
 
     // Validate that name "P1" exists in the result
-    assertThat(result.items().stream().map(item -> item.getName())).containsExactlyInAnyOrder("P1");
+    assertThat(result.items().stream().map(UserTask::getName)).containsExactlyInAnyOrder("P1");
   }
 
   @Test
@@ -247,12 +246,46 @@ class UserTaskSearchTest {
   }
 
   @Test
-  public void shouldThrowExceptionIfVariableValueNull() {
+  public void shouldThrowExceptionIfVariableValueNullInConsumer() {
 
+    // when
+    final var exception =
+        assertThrows(
+            IllegalArgumentException.class,
+            () ->
+                camundaClient
+                    .newUserTaskSearchRequest()
+                    .filter(f -> f.processInstanceVariables(List.of(vf -> vf.name("process01"))))
+                    .send()
+                    .join());
+    // then
+    assertThat(exception.getMessage())
+        .contains("Variable value cannot be null for variable 'process01'");
+  }
+
+  @Test
+  public void shouldThrowExceptionIfVariableValueNullInMap() {
     // given
-    final UserTaskVariableFilterRequest variableValueFilter =
-        new UserTaskVariableFilterRequest().name("process01");
+    final Map<String, Object> variables = new HashMap<>();
+    variables.put("process01", null);
 
+    // when
+    final var exception =
+        assertThrows(
+            IllegalArgumentException.class,
+            () ->
+                camundaClient
+                    .newUserTaskSearchRequest()
+                    .filter(f -> f.processInstanceVariables(variables))
+                    .send()
+                    .join());
+    // then
+    assertThat(exception.getMessage())
+        .contains("Variable value cannot be null for variable 'process01'");
+  }
+
+  @Test
+  public void shouldThrowExceptionIfVariableValueEmptyFilter() {
     // when
     final var exception =
         assertThrows(
@@ -263,11 +296,12 @@ class UserTaskSearchTest {
                     .filter(
                         f ->
                             f.processInstanceVariables(
-                                List.of(ResponseMapper.fromProtocolObject(variableValueFilter))))
+                                List.of(vf -> vf.name("process01").value(v -> {}))))
                     .send()
                     .join());
     // then
-    assertThat(exception.getMessage()).isEqualTo("Variable value cannot be null");
+    assertThat(exception.getMessage())
+        .contains("Variable value cannot be null for variable 'process01'");
   }
 
   @Test
@@ -294,10 +328,6 @@ class UserTaskSearchTest {
 
   @Test
   public void shouldRetrieveTaskByLocalVariablesLike() {
-    final UserTaskVariableFilterRequest variableValueFilter1 =
-        new UserTaskVariableFilterRequest()
-            .name("task01")
-            .value(new StringFilterProperty().$like("\"te*\""));
 
     final var result =
         camundaClient
@@ -305,7 +335,7 @@ class UserTaskSearchTest {
             .filter(
                 f ->
                     f.localVariables(
-                        List.of(ResponseMapper.fromProtocolObject(variableValueFilter1))))
+                        List.of(vf -> vf.name("task01").value(v -> v.like("\"te*\"")))))
             .send()
             .join();
     assertThat(result.items().size()).isEqualTo(1);
@@ -313,18 +343,13 @@ class UserTaskSearchTest {
 
   @Test
   public void shouldRetrieveTaskByLocalVariablesIn() {
-    final UserTaskVariableFilterRequest variableValueFilter1 =
-        new UserTaskVariableFilterRequest()
-            .name("task01")
-            .value(new StringFilterProperty().add$InItem("\"test\""));
 
     final var result =
         camundaClient
             .newUserTaskSearchRequest()
             .filter(
                 f ->
-                    f.localVariables(
-                        List.of(ResponseMapper.fromProtocolObject(variableValueFilter1))))
+                    f.localVariables(List.of(vf -> vf.name("task01").value(v -> v.in("\"test\"")))))
             .send()
             .join();
     assertThat(result.items().size()).isEqualTo(1);
@@ -688,7 +713,7 @@ class UserTaskSearchTest {
             .join();
     // then
     assertThat(result.items().size()).isEqualTo(1);
-    assertThat(result.items().get(0).getName()).isEqualTo("localVariable");
+    assertThat(result.items().getFirst().getName()).isEqualTo("localVariable");
   }
 
   @Test
@@ -709,7 +734,7 @@ class UserTaskSearchTest {
 
     // Then
     assertThat(result.items()).hasSize(2);
-    assertThat(result.items().stream().map(item -> item.getName()))
+    assertThat(result.items().stream().map(Variable::getName))
         .containsExactlyInAnyOrder("processVariable", "subProcessVariable");
   }
 
@@ -731,7 +756,7 @@ class UserTaskSearchTest {
 
     // Then
     assertThat(result.items()).hasSize(2);
-    assertThat(result.items().stream().map(item -> item.getName()))
+    assertThat(result.items().stream().map(Variable::getName))
         .containsExactlyInAnyOrder("processVariable", "subProcessVariable");
   }
 
